# imagestuff

./: .gitignore  Cargo.toml  README.md
misc/: Cargo.toml
misc/src/: lib.rs  mosaic.rs
raycast/: Cargo.toml
raycast/scenes/: avatar.json  plane_sphere_triangle.json
raycast/scenes/primitives/: plane.json  sphere.json  torus.json  triangle.json
raycast/src/: camera.rs  color.rs  lib.rs  main.rs  matrix.rs  objects.rs  ray.rs  raycaster.rs  scene.rs  vector.rs
raycast/src/math/: matrix.rs  vector.rs
raycast_scenes/: plane_sphere_triangle.json  spheres.json
src/: .main.rs.swp  ascii.rs  bookstuff.rs  cursed.rs  imagestuff.rs  lerp.rs  lib.rs  main.rs  raycast.rs  utils.rs
src/raycast/: camera.rs  general.rs  group.rs  matrix.rs  objects.rs  ray.rs  raycaster.rs  scene.rs  vector.rs  vector3.rs
utils/: Cargo.toml
utils/src/: lib.rs
