[package]
name = "misc"
version = "0.1.0"
authors = ["Juho Tarkkanen <50268629+trkks@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
utils = { path = "../utils" }

terminal_toys = { git = "https://github.com/trkks/terminal_toys" }

